fix: Image links and links contrast

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -129,7 +129,7 @@
     }
 
     * {
-        @apply border-stroke decoration-current/40 decoration-dotted decoration-[0.1em] underline-offset-[0.16em] outline-stroke;
+        @apply border-stroke decoration-current/40 decoration-dotted decoration-[0.1em] underline-offset-[0.16em] outline-stroke dark:decoration-current/60;
     }
     a:-webkit-any-link:focus-visible {
         @apply shadow-[0_0_0_.3125rem] shadow-highlighted/30 -outline-offset-1 outline-highlighted outline;
